We have completed the project, all code and changes runs with no error and every excercise/question is filled out, this project is ready for submission

--- a/Cryptography_Project_Spring_2025.ipynb
+++ b/Cryptography_Project_Spring_2025.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "SVl67l2JY7be",
    "metadata": {
     "id": "SVl67l2JY7be"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "ZxSYkRY8Y7bg",
    "metadata": {
     "id": "ZxSYkRY8Y7bg"
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "M6G31uilY7bh",
    "metadata": {
     "colab": {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "8AnH62M9Y7bi",
    "metadata": {
     "id": "8AnH62M9Y7bi"
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "Pl9P4K5zY7bm",
    "metadata": {
     "id": "Pl9P4K5zY7bm"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "mvfUOo5HY7bn",
    "metadata": {
     "id": "mvfUOo5HY7bn"
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "SumgLKsem5Ni",
    "metadata": {
     "id": "SumgLKsem5Ni"
@@ -471,12 +471,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 15 -11]\n",
-      " [ -4   3]]\n",
-      "[[ 15 -11]\n",
-      " [ -4   3]]\n",
-      "[[15 15]\n",
-      " [22  3]]\n",
       "Inverse matrix: [[15 15]\n",
       " [22  3]]\n"
      ]
@@ -566,17 +560,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "h-PiVmvkY7bn",
    "metadata": {
     "id": "h-PiVmvkY7bn"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deciphering Matrix:\n",
+      "[[23  7]\n",
+      " [18  5]]\n"
+     ]
+    }
+   ],
    "source": [
     "# (Need to implement this)\n",
     "def frequency_analysis(ciphertext):\n",
     "    # Analyze the frequency of digraphs in the ciphertext\n",
-    "    pass\n",
+    "    freq = {}\n",
+    "    for i in range(0, len(ciphertext), 2):\n",
+    "        digram = ciphertext[i:i+2]\n",
+    "        if len(digram) == 2:\n",
+    "            if digram in freq:\n",
+    "                freq[digram] += 1\n",
+    "            else:\n",
+    "                freq[digram] = 1\n",
+    "    return freq\n",
     "\n",
     "def find_deciphering_matrix(ciphertext_digraphs, guessed_plaintext_digraphs):\n",
     "    modulo = 26\n",
@@ -594,23 +606,36 @@
     "    def digraph_to_vector(digraph):\n",
     "        # Convert each letter in a digraph to its numerical equivalent (A=0, ..., Z=25)\n",
     "        # STEP 1: Return a numpy array of the two digraphs, change the line of code below\n",
-    "        return np.array([0 , 0])\n",
+    "\n",
+    "\n",
+    "        return np.array([ord(digraph[0]) - 65, ord(digraph[1]) - 65])\n",
+    "\n",
     "\n",
     "    # Construct matrices from digraph pairs\n",
     "    C = np.column_stack([digraph_to_vector(d) for d in ciphertext_digraphs])  # Ciphertext matrix\n",
     "\n",
     "    # STEP 2: Similarly implement this above line of code for the GUessed_plaintext_digraphs\n",
+    "    P=np.column_stack([digraph_to_vector(g) for g in guessed_plaintext_digraphs])\n",
     "\n",
     "    # STEP 3: Calculate determinant and modular inverse of determinant\n",
     "    # NOTE: Make sure you confirm that inverse is possible, try and catch the error if you can\n",
     "    # or implement some way of identifying that the inverse is not possbile\n",
+    "    det = (C[0][0] * C[1][1] - C[1][0] * C[0][1]) % modulo\n",
+    "    det_inv = mod_inverse(det, modulo)\n",
+    "    if det_inv is None:\n",
+    "        return 1\n",
     "\n",
+    "    adj = np.array([[C[1][1], -C[0][1]],\n",
+    "                [-C[1][0], C[0][0]]]) % modulo\n",
     "\n",
     "    # STEP 4: Compute modular inverse of ciphertext matrix\n",
     "\n",
+    "    C_inv = (det_inv * adj) % modulo\n",
     "\n",
     "    # STEP 5: Compute deciphering matrix by multiplying P with C^-1 modulo 'modulo'\n",
-    "    deciphering_matrix = None\n",
+    "\n",
+    "    deciphering_matrix = (P @ C_inv) % modulo\n",
+    "\n",
     "\n",
     "    return deciphering_matrix\n",
     "\n",
@@ -630,12 +655,14 @@
     "ciphertext1 = \"SONAFQCHMWPTVEVY\"\n",
     "\n",
     "ciphertext2 = \"XXWWOKCHYFANMQIYTQZPPWXEISLHAVANVUEPKNQXGUZQLHSWWGCSEJKGMDQMXYIGQRGDIBCUSYYTQRRWYTSYJVURULGMSPJUHRJUTQZPQUXXXXWWGRMSKWSGUGNIPWYTMZMJOATEIQNVGZEJRGBGEQQDXMJGGHWWMSVCDXPWXEISLHAVXXWOXXAVMDUNOBTQRNIJBR\"\n",
-    "\n"
+    "\n",
+    "\n",
+    "#frequency_analysis(ciphertext2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "pG-yZbDWY7bn",
    "metadata": {
     "id": "pG-yZbDWY7bn"
@@ -669,22 +696,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "zSar5IziY7bo",
    "metadata": {
-    "id": "zSar5IziY7bo"
+    "id": "zSar5IziY7bo",
+    "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Encoded message: \\CVK\n",
+      "Decoded message: send\n"
+     ]
+    }
+   ],
    "source": [
     "# Multi-step encoding\n",
     "def multi_step_encode(message, matrices, moduli):\n",
     "    # Apply multiple matrices in succession to encode the message\n",
-    "    pass\n",
+    "    asci_keys=[ord(c) - 97 for c in message.lower()]\n",
+    "\n",
+    "    encodedChar = []\n",
+    "    for i in range(0, len(asci_keys),2):\n",
+    "        blocks=asci_keys[i:i+2]\n",
+    "        vector_block = np.array(blocks).reshape(2, 1)\n",
+    "        #print(vector_block)\n",
+    "\n",
+    "        #encodes twice with both key matrices\n",
+    "        C_initial=(matrices[0] @ vector_block ) % moduli[0]\n",
+    "        C_final=(matrices[1] @ C_initial ) % moduli[1]\n",
+    "       \n",
+    "        \n",
+    "        encodedChar.extend([x[0] for x in C_final.tolist()])\n",
+    "    message = ''.join(chr(x + 65) for x in encodedChar)\n",
+    "    #print(message)\n",
+    "    return message\n",
     "\n",
     "# Multi-step decoding\n",
     "def multi_step_decode(encoded_message, matrices, moduli):\n",
-    "    # Apply the inverse of multiple matrices in succession to decode the message\n",
-    "    pass\n",
+    "    mtx_1 = matrices[0]\n",
+    "    \n",
+    "    det_1 = (mtx_1[0][0]*mtx_1[1][1] - mtx_1[1][0]*mtx_1[0][1]) % moduli[0]\n",
+    "    det_1 = mod_inverse(det_1, moduli[0])\n",
+    "\n",
+    "    adj_1 = np.array([\n",
+    "        [mtx_1[1][1], -mtx_1[0][1]],\n",
+    "        [-mtx_1[1][0], mtx_1[0][0]]\n",
+    "    ]) % moduli[0]\n",
+    "\n",
+    "    inv_matrix1 = (det_1 * adj_1) % moduli[0]\n",
+    "\n",
+    "    #modular inverse of 2nd key matrix\n",
+    "    mtx_2 = matrices[1]\n",
+    "    det_2 = (mtx_2[0][0]*mtx_2[1][1] - mtx_2[1][0]*mtx_2[0][1]) % moduli[1]\n",
+    "    det_2 = mod_inverse(det_2, moduli[1])\n",
+    "\n",
+    "    adj_2 = np.array([\n",
+    "        [mtx_2[1][1], -mtx_2[0][1]],\n",
+    "        [-mtx_2[1][0], mtx_2[0][0]]\n",
+    "    ]) % moduli[1]\n",
+    "\n",
+    "    inv_matrix2 = (det_2 * adj_2) % moduli[1]\n",
+    "\n",
+    "    Numerical_val = [ord(c) - 65 for c in encoded_message]\n",
+    "    decodedMessage = []\n",
+    "    \n",
+    "    for i in range(0, len(Numerical_val), 2):\n",
+    "        blocks = Numerical_val[i:i+2]\n",
+    "        vector_block = np.array(blocks).reshape(2, 1)\n",
+    "        decoded1 = (inv_matrix2 @ vector_block) % moduli[1]\n",
+    "        decoded2 = (inv_matrix1 @ decoded1) % moduli[0]\n",
+    "        decodedMessage.extend([x[0] for x in decoded2.tolist()])\n",
+    "\n",
+    "    message = ''.join(chr(x + 97) for x in decodedMessage)\n",
+    "    return message\n",
     "\n",
     "# Example usage\n",
     "message = \"SEND\"\n",
@@ -721,13 +808,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4TszMtQHTKWP",
    "metadata": {
     "id": "4TszMtQHTKWP"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# When using two different matrices under the same modulus, our encoding message seems to go out of\n",
+    "# the bounds of the ASCI values assigned to letters and thus our decoded message is '\\CVK'. Despite \n",
+    "# this though, decoding works as expected and we get our original message 'send' back."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -763,21 +854,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "BfMtBDe-tEbx",
    "metadata": {
     "id": "BfMtBDe-tEbx"
    },
    "outputs": [],
    "source": [
-    "Jarah:\n",
+    "# Jarah: Question number 1 and 2 helped us set up 3 and 4, we were able to use the functions that we had \n",
+    "# created in the first 2 problems as basically a helper function when doing multi-step encoding/decoding\n",
+    "# and for the cipher text. However, we did find some troubles when finding the inverse as our function was\n",
+    "# only returning the correct numbers for the first row but not for the second row. We discovered that we were \n",
+    "# modding the adjunct by 26 after we swapped a and d and negated b and c values. This was redundant since we \n",
+    "# only needed to mod the product of the determinant and the adjunct(the inverse). This seemed to fix our issue and\n",
+    "# allowed us to calculate the proper inverse for the given word \"SEND\". We ended up using what we did to encode and\n",
+    "# decode mainly for problem four with our multi-step processes. However, we defined 2 matricies by the corresponding\n",
+    "# indicies of our matricies array and encoded/decoded both in order to properly get our message back. We did this by\n",
+    "# multiplying our second inverted matrix by the vector block mod 29 and taking that result and multiplying our first \n",
+    "# inverted matrix by that mod 26. We then converted the values of this matrix back to their ascii values to return\n",
+    "# the word \"send\". My favorite part of this project was the collaboration with my group mates, we all knew our tasks\n",
+    "# and were willing to help one another with any troubles we ran into, I also really enjoyed seeing a real-life \n",
+    "# application for concepts we have learned in the class. I've only ever talked about cryptography in an abstract way\n",
+    "# so it was great to see it used in very basic but applicable way. Thank you guys for assigning this project and \n",
+    "# being so helpful with any questions or concerns the class had.\n",
     "\n",
     "    \n",
-    "Jayquelline:\n",
-    "    \n",
+    "# Kayo: For question number 3, I had made a mistake when calculating the inverse of the ciphertext\n",
+    "# rather than the inverse of the plain text. This, in turn, yielded matrix [{9, 3}, {4, 5}] when we\n",
+    "# really should have gotten [{23, 7}, {18, 5}]. One thing that helped my thought process behind correctly\n",
+    "# understanding this problem was using the equation C = K * P mod(m) where C is the ciphertext matrix,\n",
+    "# K is the key matrix/deciphering matrix, and P is the plaintext matrix. Since we are solving for the \n",
+    "# deciphering matrix (K), the equation can then be rewritten as K = C * P^-1 mod(m). Before using the \n",
+    "# above equation (C = K * P mod(m)) I had a tough time following along with what exactly the question was \n",
+    "# asking me to solve for. One thing helped me with the understanding and to verify whether our solution \n",
+    "# was correct or not was confirming my answer with other teams.\n",
     "\n",
-    "Kayo:"
+    "# Jaqueline: For question number 4, we are basically doing the same thing as question number 1. We are given\n",
+    "# the message 'send', we have to encipher this message by seperating the string into a 2x1 matrix and \n",
+    "# turning the values into ASCI ones which is then multiplied by a key matrix to yield the encoded matrix. \n",
+    "# The second part of the problem was deciphering the now enciphered message to get our original message, \n",
+    "# 'send'. However, for problem 4 we had to take it a step further and encode our message twice which then\n",
+    "# resulted in having to decode the message twice. I think the most challenging part for me was figuring out\n",
+    "# how to access the different values for each matrix in the matrices variable and also figuring out\n",
+    "# why our encoded message was '/CVK', I had not realized this was the correct encoded message we were\n",
+    "# supposed to be getting so I spent some time debugging with my class/teammates and looking over the\n",
+    "# work I had done. Getting confirmation from Vamsi about my answer and also the fact I got 'send' after\n",
+    "# decoding."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0a2f378-d1df-4487-9a3d-686efa6190dd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
